# SCB-POC-PGP

./: .gitignore  index.html
harness/: README.md  config.json  pyproject.toml  requirements.txt
harness/src/harness/: __init__.py  best_variant.py  config.py  corpus.py  environment.py  fairness.py  interop.py  keys.py  metrics.py  report.py  report_human.py  resource_sampler.py  scheduler.py  soak.py  statistics.py  statistics_engine.py  subprocess_driver.py  variants.py  verification.py  version.py
harness/src/harness/contract/: __init__.py  (+3 more)
harness/tests/: _fake_runner.py  conftest.py  test_best_variant.py  test_best_variant_property.py  test_config.py  test_config_property.py  test_contract_exit_codes.py  test_contract_models.py  test_contract_schema.py  test_corpus.py  test_corpus_classification_property.py  test_corpus_properties.py  test_environment.py  test_external_tools_integration.py  test_fairness.py  test_fairness_non_comparable_property.py  test_fairness_property.py  test_interop.py  test_interop_property.py  test_keys.py  test_keys_property.py  test_metrics.py  test_pipeline_integration.py  test_report.py  test_report_human.py  test_resource_sampler.py  test_scheduler.py  test_scheduler_property.py  test_skeleton.py  test_soak.py  test_soak_trend_property.py  test_statistics.py  test_statistics_cold_start.py  test_statistics_cost_energy.py  test_statistics_cost_property.py  test_statistics_error_rate.py  test_statistics_error_rate_property.py  test_statistics_inconclusive_property.py  test_statistics_invariant_property.py  test_statistics_noise_floor.py  (+13 more)
(+150 files in other folders)
