[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pgp-benchmark-harness"
version = "0.1.0"
description = "Neutral orchestrator (Benchmark_Harness) for the Go vs Java PGP encrypt/decrypt benchmark POC."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

# Runtime dependencies are pinned for reproducibility (Req 19.1).
# Scope guard (Req 1.2): NO network/DB/web client libraries — the harness only
# reads local files, spawns Runner subprocesses, and samples local resources.
dependencies = [
    "numpy>=2.1,<3",
    "scipy>=1.14,<2",
    "psutil>=6.0,<8",
    "jsonschema>=4.20,<5",
]

[project.optional-dependencies]
test = [
    "hypothesis>=6.100,<7",
    "pytest>=8.0,<9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
